# eyeSpeak

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TEAM_SUMMARY.md  pyproject.toml  start.sh  test_api.py
.claude/: launch.json
app/: __init__.py  caregiver.py  main.py  orchestrate.py
backend/: .env.example  package-lock.json  package.json
backend/src/: index.js  routes.js
backend/src/services/: ai.js  band.js  memory.js  nimble.js
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/caregiver/: page.jsx
frontend/components/: GazeCalibration.jsx
frontend/hooks/: useGazeTracker.js
frontend/lib/: api.js
static/: caregiver.html
