[project]
name = "eyespeak-ai"
version = "0.1.0"
description = "EyeSpeak AI - Eye Gaze Communication System for Stroke Patients"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "cognee>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyttsx3>=2.90",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
